[add] aggiunto il database prodotti

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -5,5 +5,5 @@
 @import './partials/typography';
 @import './partials/utils';
 @import './partials/header';
-@import './partials/main';
+@import './partials/home';
 @import './partials/footer';
